# internal/dto/booking.go
@@ -5,8 +5,13 @@ import "time"
 type CreateBookingRequest struct {
 	ServiceID     string    `json:"service_id"     validate:"required,uuid4"`
 	StaffID       string    `json:"staff_id"       validate:"required,uuid4"`
-	StartsAt      time.Time `json:"starts_at"      validate:"required"`
-	EndsAt        time.Time `json:"ends_at"        validate:"required"`
+	StartAt       time.Time `json:"start_at"       validate:"required"`
 	CustomerName  string    `json:"customer_name"  validate:"required,min=2,max=100"`
 	CustomerEmail string    `json:"customer_email" validate:"required,email"`
+}
+
+type SlotResponse struct {
+	StaffID string    `json:"staff_id"`
+	Start   time.Time `json:"start"`
+	End     time.Time `json:"end"`
 }
